feat: setup class validator
