# src/controllers/dto/ApiResponse.ts
@@ -1,10 +1,11 @@
-export interface ApiResponse<T> {
+import { FieldErrors } from 'tsoa';
+
+export interface ApiResponse<T> extends BaseApiResponse {
   data: T;
-  message?: string;
-  success: boolean;
 }
 
 export interface BaseApiResponse {
   message?: string;
   success: boolean;
+  validationErrors?: FieldErrors;
 }
