# src/documentation/swagger.json
@@ -73,43 +73,65 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"FieldErrors": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": {
+					"properties": {
+						"value": {},
+						"message": {
+							"type": "string"
+						}
+					},
+					"required": [
+						"message"
+					],
+					"type": "object"
+				}
+			},
 			"ApiResponse_PagedList_IProduct__": {
 				"properties": {
-					"data": {
-						"$ref": "#/components/schemas/PagedList_IProduct_"
-					},
 					"message": {
 						"type": "string"
 					},
 					"success": {
 						"type": "boolean"
+					},
+					"validationErrors": {
+						"$ref": "#/components/schemas/FieldErrors"
+					},
+					"data": {
+						"$ref": "#/components/schemas/PagedList_IProduct_"
 					}
 				},
 				"required": [
-					"data",
-					"success"
+					"success",
+					"data"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
 			"ApiResponse_IProduct-Array_": {
 				"properties": {
-					"data": {
-						"items": {
-							"$ref": "#/components/schemas/IProduct"
-						},
-						"type": "array"
-					},
 					"message": {
 						"type": "string"
 					},
 					"success": {
 						"type": "boolean"
+					},
+					"validationErrors": {
+						"$ref": "#/components/schemas/FieldErrors"
+					},
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/IProduct"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
-					"data",
-					"success"
+					"success",
+					"data"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -121,6 +143,9 @@
 					},
 					"success": {
 						"type": "boolean"
+					},
+					"validationErrors": {
+						"$ref": "#/components/schemas/FieldErrors"
 					}
 				},
 				"required": [
@@ -226,7 +251,16 @@
 					"Products"
 				],
 				"security": [],
-				"parameters": []
+				"parameters": [
+					{
+						"in": "query",
+						"name": "query",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/api/products/searchByStockQuantity": {
